# SteoBlockEnc

./: .gitignore  AGENTS.md  INSTALL_SAGEMATH_QUICK.md  README.md  SAGEMATH_SETUP.md  install_sagemath.sh  pyproject.toml  requirements.txt  run_publication.sh  setup.py
data/: convergence_comparison.npz  paper2_sim1_heisenberg_verification.npz  paper2_sim2_gate_counts.npz  paper2_sim3_convergence.npz  paper2_sim4_noise.npz  paper2_sim5_total_cost.npz  qulacs_verification.npz  sim1_base_cases.npz  sim2_inversion.npz  sim3_various_targets.npz  sim4_convergence.npz  sim5_error_analysis.npz  sim6_roundtrip.npz  sim7_heisenberg_demo.npz  stereo_qsp_results.npz
docs/: PACKAGING_MIGRATION.md  SYMBOLIC_COMPUTATION.md  VERIFICATION_REPORT.txt
ms/: COMPILATION_GUIDE.md  Makefile  README.md  REVTEX_NOTES.md  compile.sh  main.dvi  main.tex  main.toc  outline.md  references.bib
ms/paper2_material/: README.md  qsp_05_block_encoding_FULL.tex  qsp_06_cost_analysis_ORIGINAL.tex
ms/sections/: 01_introduction.tex  02_preliminaries.tex  03_encoding.tex  04_mobius.tex  appendix_proofs.tex  qsp_01_introduction.tex  qsp_02_preliminaries.tex  qsp_03_encoding.tex  qsp_04_main.tex  qsp_05_applications_v2.tex  qsp_05_block_encoding.tex  qsp_06_cost_analysis.tex  qsp_07_discussion.tex
ms2/: Makefile  main.tex  references.bib
ms2/sections/: 01_introduction.tex  02_review.tex  03_block_encoding.tex  04_qsvt_protocol.tex  05_circuits.tex  06_decoding.tex  07_numerics.tex  08_discussion.tex  appendix.tex
notebooks/symbolic/: 01_stereographic_basics.ipynb  02_equation_verification.ipynb
scripts/: convergence_comparison.py  diagnostic_qsp.py  generate_figures.py  generate_figures_from_data.py  generate_grover_figure.py  generate_heisenberg_figure.py  generate_new_figures.py  generate_schematic_figure.py  heisenberg_demo.py  heisenberg_demo_pub.py  qulacs_heisenberg_sim.py  run_simulations.py  run_stereo_experiments.py  stereo_phase_find.py
scripts/paper2/: generate_figures.py  run_simulations.py  sim5_total_cost_comparison.py
src/stereo_block_enc/: __init__.py
src/stereo_block_enc/numerical/: __init__.py  qsp_phases.py
src/stereo_block_enc/symbolic/: __init__.py  mobius.py  qsp.py  stereographic.py
