[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stereo-block-enc"
version = "0.1.0"
description = "Stereographic projection for quantum block encoding and quantum signal processing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {email = "vicenley@gmail.com"},
]
keywords = [
    "quantum computing",
    "quantum signal processing",
    "stereographic projection",
    "block encoding",
    "quantum algorithms",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "sympy>=1.12",
    "qiskit>=0.45.0",
    "pennylane>=0.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "nbconvert>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# SageMath dependencies (optional, for advanced symbolic computation)
sage = [
    "cypari2>=2.2.1",
    "cython>=3.0,!=3.0.3,!=3.1.0",
    "gmpy2>=2.1.5",
    "memory_allocator",
    "meson-python",
    "ninja>=1.8.2",
    "jinja2",
]

# Documentation dependencies
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinxcontrib-bibtex>=2.5.0",
]

# All optional dependencies combined
all = [
    "stereo-block-enc[dev,sage,docs]",
]

[project.urls]
Homepage = "https://github.com/vicenley/SteoBlockEnc"
Repository = "https://github.com/vicenley/SteoBlockEnc"
Issues = "https://github.com/vicenley/SteoBlockEnc/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["stereo_block_enc*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=stereo_block_enc",
    "--cov-report=term-missing",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "qiskit.*",
    "pennylane.*",
    "matplotlib.*",
    "scipy.*",
]
ignore_missing_imports = true
